CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.5.3
-------------
* Fixed numerous minor logic errors in scenes discovered by applying strict typing.
* Fixed some race detection errors in scenes, also discovered by applying strict typing.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.5.2
-------------
* Fixed bug in Abilities (would show if you tried to Heal out of combat, and then pressed "Back").
* Fixed bug in default pregnancy trigger handler.
* Fixed Cassidy's shop being broken.
* Added the ability to set cock size on character creation.
* The pregnancy hastening effects of Gestarium are now applied when using Gestarium+ too.
* Fixed a bug in Lagon's bad end.
* Fixed a bug in fucking Terry with strapon (borrowed).

Version 0.5.1
-------------
* Correctly bundled fonts.
* Fixed a bug in one of Cale's scenes.
* Fixed Fera being bugged.
* Fixed Miranda first date bug.

Version 0.5.0
-------------
* Fixed numerous typos.
* Fixed a few Cavalcade parser errors.
* Changed common measurement unit to imperial (inches, feet, yards) for consistency.
 - Adjusted a bunch of NPC cock sizes to account for this. Holler if you find discrepancies or size evaluations that doesn't make sense!
* Becoming a herm in the intro now starts you with a seven inch cock (bigger than before).
* Added a slew of new cock size adjectives (and reduced their prevalence in scenes). The descriptors should be slightly less repetitive now.
* Added a review/redo option to character creation in the intro.
* Renamed FemmeBoy body type to Trap.
* Added a Voluptuous option for female start.
* Using cheats to get items in the tent now gives 10 of every item instead of 1.
* Fixed a bug in Alchemy that would cause brewing to consume 2x the amount of ingredients actually required.