@@ -1,0 +1,6 @@
+import { GAME, WORLD } from "./GAME";
+
+export function InitDebugObjects() {
+    window.game = GAME();
+    window.world = WORLD();
+}
